# auto-invest

./: .gitignore  app.py  main.py  pyproject.toml  start.sh  test.py
common/: upbitTools.py
notifications/: slack.py
strategies/: upbitMagicSplit.py
