[project]
name = "auto-invest"
version = "0.1.0"
description = ""
authors = [
    {name = "Kwanwoo Jeong",email = "kwanwoo.jeong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "finance-datareader (>=0.9.96,<0.10.0)",
    "pykrx (>=1.0.48,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "plotly (>=6.1.0,<7.0.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "pyupbit (>=0.2.34,<0.3.0)",
    "ccxt (==4.2.19)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
name = "auto-invest"
version = "0.1.0"
description = ""
authors = ["Kwanwoo Jeong <kwanwoo.jeong@gmail.com>"]
readme = "README.md"
packages = [{include = "notifications"}]

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.32.3,<3.0.0"
finance-datareader = ">=0.9.96,<0.10.0"
pykrx = ">=1.0.48,<2.0.0"
bs4 = ">=0.0.2,<0.0.3"
plotly = ">=6.1.0,<7.0.0"
pandas-datareader = ">=0.10.0,<0.11.0"
yfinance = ">=0.2.61,<0.3.0"
pyupbit = ">=0.2.34,<0.3.0"
ccxt = "==4.2.19"
pyyaml = ">=6.0.2,<7.0.0"
pytz = ">=2025.2,<2026.0"
python-dotenv = ">=1.1.0,<2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
